--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ h1{
     color: aliceblue;
 }
 h1:hover{
-    background-color: aliceblue;
-    color: teal;
+    background-color: rgb(87, 31, 31);
+    color: rgb(2, 44, 44);
+
 }
